--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "description": "",
   "dependencies": {
     "discord.js": "^14.16.3",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
